bugfix illegal byte sequence
Signed-off-by: FunThomas424242 <funthomas424242@gmail.com>

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,13 @@
 ## Change Historie
 
+# v0.1.3
+
+ * bugfix illegal sequence
+
+# v0.1.2
+
+ * Ausgabe der Variablen eingefügt
+
 # v0.1.1
  
  * parameter ausgelagert
